Fix map selector scroll bug on smaller screens

--- a/src/MapSelector.css
+++ b/src/MapSelector.css
@@ -1,6 +1,5 @@
 .MapList {
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
   background-color: #282c34;
   display: flex;
   flex-wrap: wrap;
